# magistratik-backend

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_and_push.yaml  run_test.yaml
backend/: __main__.py  app.py  settings.py
backend/api/: __init__.py  players.py
backend/database/: __init__.py  tables.py
backend/models/: players.py
backend/services/: __init__.py  players.py
migrations/: env.py
migrations/versions/: c0f532f7c0ce_initial.py
tests/: conftest.py  test_players.py
