[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Антон Григорьев <grianton535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
alembic = "^1.9.3"
sqlalchemy = "^2.0.3"
python-dotenv = "^0.21.1"
asyncpg = "^0.27.0"
uuid = "^1.30"
psycopg2-binary = "^2.9.5"
loguru = "^0.6.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
reorder-python-imports = "^3.9.0"
pre-commit = "^3.1.0"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
